[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/full_controller_icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/pause_event.gd" type="Script" id=2]
[ext_resource path="res://fonts/lato_normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://themes/gui_button.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.254902, 0.254902, 0.254902, 1 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="pause_event" type="Node2D"]
z_index = 2000
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 639.546, 483.009 )
scale = Vector2( 0.267408, 0.267408 )
texture = ExtResource( 1 )

[node name="whitescreen" type="Panel" parent="."]
margin_left = 2.3916
margin_top = 2.3916
margin_right = 1919.39
margin_bottom = 1080.39
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="ColorRect" parent="whitescreen"]
margin_left = 0.608398
margin_right = 1920.0
margin_bottom = 375.0
color = Color( 0, 0.305882, 0.505882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mid" type="ColorRect" parent="whitescreen"]
visible = false
margin_top = 250.0
margin_right = 1920.0
margin_bottom = 500.124
color = Color( 0, 0.294118, 0.505882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom" type="ColorRect" parent="whitescreen"]
margin_top = 375.0
margin_right = 1920.0
margin_bottom = 750.0
color = Color( 0.505882, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countdown" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.596078 )
margin_left = 588.541
margin_top = 322.658
margin_right = 1281.54
margin_bottom = 647.658
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="Label" parent="countdown"]
margin_left = 33.4833
margin_top = 88.4913
margin_right = 661.483
margin_bottom = 214.491
custom_fonts/font = ExtResource( 3 )
text = "Resuming..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_panel" type="Panel" parent="."]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 167.259
margin_top = 1.65015
margin_right = 1751.26
margin_bottom = 1018.65
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="Label" parent="pause_panel"]
margin_left = 1078.7
margin_top = 895.949
margin_right = 2351.7
margin_bottom = 1192.95
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "GAME PAUSED:
all elements were frozen in place
please answer the questions above"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume_button" type="Button" parent="pause_panel"]
margin_left = 535.908
margin_top = 774.899
margin_right = 1464.91
margin_bottom = 973.899
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "CLICK TO RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question_top" type="Label" parent="pause_panel"]
margin_top = 11.6085
margin_right = 2333.0
margin_bottom = 208.609
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "In your opinion, how many missiles are currently hidden in this part of the screen, behind this blue square?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="pause_panel/question_top"]
margin_left = 955.0
margin_top = 243.921
margin_right = 1330.0
margin_bottom = 406.921
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/selection_color = Color( 0.819608, 0.819608, 0.819608, 0.576471 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
align = 1
placeholder_text = "..."
placeholder_alpha = 0.5
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question_mid" type="Label" parent="pause_panel"]
visible = false
margin_left = 9.77515
margin_top = 256.299
margin_right = 2217.78
margin_bottom = 374.299
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "How many missiles are in this part of the screen? (mid/blue part)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="pause_panel/question_mid"]
margin_left = 815.156
margin_top = 137.25
margin_right = 1576.16
margin_bottom = 271.25
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/selection_color = Color( 0.819608, 0.819608, 0.819608, 0.576471 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
align = 1
placeholder_text = "enter a number here"
placeholder_alpha = 0.5
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question_bottom" type="Label" parent="pause_panel"]
margin_top = 382.64
margin_right = 2304.0
margin_bottom = 579.64
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "In your opinion, how many missiles are currently hidden in this part of the screen, behind this red square?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="pause_panel/question_bottom"]
margin_left = 955.0
margin_top = 266.582
margin_right = 1319.0
margin_bottom = 430.582
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/selection_color = Color( 0.819608, 0.819608, 0.819608, 0.576471 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
align = 1
placeholder_text = "..."
placeholder_alpha = 0.5
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
[connection signal="pressed" from="pause_panel/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="text_changed" from="pause_panel/question_top/LineEdit" to="." method="_on_LineEdit_text_changed" binds= [ "top" ]]
[connection signal="text_changed" from="pause_panel/question_mid/LineEdit" to="." method="_on_LineEdit_text_changed" binds= [ "mid" ]]
[connection signal="text_changed" from="pause_panel/question_bottom/LineEdit" to="." method="_on_LineEdit_text_changed" binds= [ "bottom" ]]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
